Refactor UI components, update docs, and add design assets
- Refactor multiple UI components for improved styling and structure
- Update and reorganize documentation and progress logs
- Add new design assets and user wiki directories
- Adjust Tailwind and global CSS for theme support
- Update VSCode settings and add deployment script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,10 @@
     "**/.ai/sessions/**": true, // Исключить логи сессий из поиска по умолчанию
     "**/docs/progress/**": true, // Исключить старые отчеты о прогрессе
     "**/docs/validation_report.md": true
+  },
+  "piny.project_settings": {
+    "open-pages": [
+      "index.html"
+    ]
   }
 }
