--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.15.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@wixc3/react-board": "^4.6.2",
@@ -85,6 +86,7 @@
     "lint-staged": "^16.0.0",
     "next-router-mock": "^1.0.2",
     "postcss": "^8",
+    "sequelize-cli": "^6.6.3",
     "tailwindcss": "^3.4.1",
     "ts-morph": "^25.0.1",
     "typescript": "^5"
